<resources>
    <string name="app_name">Planto</string>

    <string name="planto_welcomes">planto welcomes</string>
    <string name="enter_password">Password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sign_up">Sign up</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="send_otp">Send OTP</string>

    <string name="resend_otp">Resend OTP</string>
    <string name="mobile_number">mobile number</string>
    <string name="request">Request</string>
    <string name="requests">Requests</string>
    <string name="enter_your_registered_email">Email</string>
    <string name="done">done</string>
    <string name="enter_your_name">Name</string>
    <string name="enter_your_email">Email</string>
    <string name="Enter_password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="Enter_OTP">OTP</string>
    <string name="Enter_name">Name</string>
    <string name="Enter_new_password">New password</string>
    <string name="Confirm_new_password">Confirm new password</string>


    <string name="sign_in_failed">Sign In Failed&#8230;</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign out</string>
    <string name="user">User :</string>
    <string name="camera">Camera</string>
    <string name="verified_statuses">Verified Statuses</string>
    <string name="update">Update</string>
    <string name="start_planting">Start Planting</string>
    <string name="location">Location</string>
    <string name="Plant">Plant</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="plantate">Plantate</string>
    <string name="submit">Submit</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="payment">Payment</string>
    <string name="verification">Verification</string>
    <string name="awareness">Awareness</string>
    <string name="settings">Settings</string>
    <string name="rs">\u20B9</string>
    <string name="show_passbook">Show passbook</string>
    <string name="passbook">Passbook</string>
    <string name="map_key" translatable="false">AIzaSyDADZ9q7MLUuTBMfAsBZR-jtRVE19kmmaM</string>
    <string name="username">Username</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="user_email">User Email</string>
    <string name="verified_badge">Verified Badge</string>
    <string name="gallery">Gallery</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="invite">Invite</string>
    <string name="app_slogan">Join the Green side</string>
    <string name="version">Version 1.0</string>
    <string name="upload">Upload</string>
    <string name="queries_faqs">General queries and FAQ</string>
    <string name="report_plant">I want to report an issue about a plant</string>
    <string name="manage_ac">Manage My Planto account</string>
    <string name="refer_frnds">Referring friends to Planto</string>
    <string name="general_issues">General Issues</string>
    <string name="issue_while_verif">Iam facing issues while verification</string>
    <string name="issue_not_mentioned">My issue not mentioned above</string>
    <string name="wallet">Wallet</string>
    <string name="planto_wallet">Planto wallet</string>
    <string name="paytm">Paytm</string>
    <string name="link">Link</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of birth</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="redeem_money">Redeem your Money</string>
    <string name="not_enough_money">You don\'t have enough money</string>


    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="new_email">New Email</string>
    <string name="save">Save</string>
    <string name="trans_money">Trans money</string>
    <string name="redeem">Redeem</string>
    <string name="app_language">App Language</string>
    <string name="selected_lang">English</string>
    <string name="not_now">NOT NOW</string>
    <string name="sign_out_dialog_txt">Are you sure to signout from Planto App?</string>
    <string name="location_need">Location must be Enabled</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="enter_email_pass">Please enter email/password</string>


    <string name="mapbox_access_token">pk.eyJ1IjoicmFqZXNoa2VzaG9qdSIsImEiOiJjazFjejNoZG4wMm81M2dwZGt2OG5hYWpoIn0.EYvQfcWSeKjSXXdlXUyDzw</string>

    <string name="testBannerAdUnitId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="testRewardedAdUnitId">ca-app-pub-3940256099942544/5224354917</string>
    <string name="testInterstitialAdUnitId">ca-app-pub-3940256099942544/1033173712</string>
    <string name="BannerAdUnitId">ca-app-pub-4819989435413590/4343775786</string>
    <string name="InterstitialAdUnitId">ca-app-pub-4819989435413590/5461895265</string>
    <string name="RewardedAdUnitId">ca-app-pub-4819989435413590/7652944337</string>

    <string name="invalid_email_pass">Invalid Email/Password</string>
    <string name="verify_email">Please verify your email</string>
    <string name="enter_all_creds">please enter all the credentials</string>
    <string name="pass_unmatched">Password not matched</string>
    <string name="check4_email_verif">Check Your Email For Verification</string>
    <string name="reset_link_sent">Reset password email sent</string>
    <string name="exit_toast">Tap back button to exit</string>

</resources>
