<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bottomsheet">

    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:backgroundTint="@color/trans1"
        android:alpha="0.2"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="2dp"
        android:elevation="-1dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_your_gender"
        android:fontFamily="@font/raleway_medium"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:padding="10dp" />
    <TextView
        android:id="@+id/male"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text ="@string/male"
        android:fontFamily="@font/raleway_medium"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />
    <TextView
        android:id="@+id/female"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:fontFamily="@font/raleway_medium"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"/>
    <TextView
        android:id="@+id/other"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:fontFamily="@font/raleway_medium"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"/>




</LinearLayout>