<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.About">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        android:id="@+id/tool_bar_about"
        android:layout_marginTop="24dp"/>


    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:src="@raw/planto"/>

    <TextView
        android:id="@+id/about_logo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/app_name"
        android:layout_above="@id/about_logo"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/raleway_bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/app_slogan"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/about_logo"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="@string/version"
        android:layout_below="@id/about_logo"
        android:textAlignment="center"
        android:layout_marginTop="50dp"/>
</RelativeLayout>