<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.Payments">

    <include
        layout="@layout/tool_bar"
        android:id="@+id/payment_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/payment_toolbar">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/wallet"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:id="@+id/txt_wallet"/>
            <LinearLayout
                android:id="@+id/layout_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="70dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/walletplanto"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planto_wallet"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="30dp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rs"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="90dp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/txt_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="145dp"
                android:scaleType="centerCrop"
                android:src="@raw/paytm"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paytm"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="80dp"
                android:layout_marginTop="150dp"/>
            <Button
                android:id="@+id/link_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="270dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_button"
                android:text="@string/link"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="200dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/dash">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="243dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/showpassbook"/>

            <TextView
                android:id="@+id/passbook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="245dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/show_passbook"
                android:textAllCaps="true"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView_payments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:adUnitId="@string/BannerAdUnitId"
                app:adSize="MEDIUM_RECTANGLE"
                android:layout_below="@id/passbook"
                android:layout_marginTop="300dp"
                android:layout_alignParentBottom="true"/>
        </androidx.cardview.widget.CardView>

    </ScrollView>

</RelativeLayout>